# UniversityCoursework

./: .gitignore  README.md
COMP1202/: AssignmentPrep.sh
COMP1202/coursework/: Battle.java  ConfigReader.java  Decision.java  EcsBuildingDefence.java  Main.java  Makefile  readme.txt
COMP1202/extension/: ConfigReader.java  Decision.java  EcsBuildingDefence.java  readme.txt
COMP1202/lab7/: Debug.java
COMP1204/coursework1/: README.md  create_csv.sh  create_map_plot.sh  plot-locations-on-map.gpi
COMP1204/coursework2/: README.md  dataset.sql  dataset2.sql  dataset3.sql  ex11.sql  ex12.sql  ex14.sql  ex15.sql  ex16.sql  ex17.sql  ex18.sql  ex19.sql  plot.sh  report.tex
COMP1204/lab2/: loop.sh  var.sh
COMP1204/lab3/: basic.sh  extension1.sh  extension2.sh
COMP1204/lab4/: myfirstpaper.tex
COMP1204/lab5/: comp1204students.txt  lab3_solution_optimized.sh  lab3_solution_unoptimized.sh
COMP1204/lab6/: part1.sgml  part2.xml  part3.xml  part4.xml  part5.xml
COMP1204/lab7/: part3.xml  quiz.txt
COMP1206/coursework/: README.md  credits.txt  pom.xml
COMP1206/lab10/: q1.c  q2.c
COMP1206/lab5/: FilesIOQ1Test.java  FilesIOQ2Test.java  JavaFileUtil.java
COMP1206/lab6/: MinInt.java  RecursionQ1Test.java  RecursionQ2Test.java
COMP1206/lab7/: Counter.java  CyclicQueue.java  QueueTest.java  Zoo.java
COMP1206/lab8/: SynchronisationQ1Test.java  SynchronisationQ2Test.java  SynchronisationQ3Test.java
COMP1206/lab9/: DAGSort.java  DAGSortInvalid.java  DAGSortTest.java
COMP1216/coursework1/: readme.txt
COMP1216/coursework2/: .project  AppointmentManagement.bcm  AppointmentManagement.bpo  AppointmentManagement.bpr  AppointmentManagement.bps  AppointmentManagement.bum  AppointmentManagement.bumx  AppointmentManagementContext.bcc  AppointmentManagementContext.bpo  AppointmentManagementContext.buc  AppointmentManagementContext.bucx  UserManagement.bcm  UserManagement.bum  UserManagement.bumx  UserManagementContext  UserManagementContext.bcc  UserManagementContext.bpo  UserManagementContext.buc  UserManagementContext.bucx  VaccinationCenters.bcm  VaccinationCenters.bpo  VaccinationCenters.bpr  VaccinationCenters.bps  VaccinationCenters.bum  VaccinationCenters.bumx  VaccinationCentersContext  VaccinationCentersContext.bcc  VaccinationCentersContext.bpo  VaccinationCentersContext.buc  (+1 more)
COMP2211/: README.md  pom.xml
COMP2215/digital-dice/: CMakeLists.txt  dice.c
COMP2215/piconeoled/: CMakeLists.txt  neoPixel.c
COMP2215/rios/: CMakeLists.txt  main.c  rios.c  rios.h
COMP2215/timer/: CMakeLists.txt  timer.c
COMP2215/wack-a-mole/: CMakeLists.txt  wack-a-mole-stub.c  wack-a-mole.c
COMP3207/: .gitignore
COMP3207/coursework/backend/: .env  Dockerfile  docker-compose.yml  pyproject.toml
COMP3207/coursework/backend/app/: auth.py  auth_ops.py  database.py  main.py  match.py  models.py  pictures.py  profile.py  test.py  utils.py
COMP3226/: CW1_RobTheBank.txt
app/: dependency-reduced-pom.xml
coursework/: Main.java  Makefile
(+834 files in other folders)
